# aseprite

./: .appveyor.yml  .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.txt  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Dockerfile  EULA.txt  FAQ.txt  HACKING.txt  INSTALL.md  INSTALL.txt  ISSUE_TEMPLATE.md  LEGAL.txt  LICENSE  LICENSE.txt  NEWS-es.txt  NEWS.txt  Ooooo  README-es.txt  README.html  README.md  README.txt  SECURITY.md  TODO.md  TODO.txt  WARNING.txt  all.h  build.cmd  (+19 more)
desktop/: CMakeLists.txt  aseprite-thumbnailer  aseprite.appdata.xml  aseprite.desktop
desktop/kde/: CMakeLists.txt  aseprite_thumb_creator.cpp  aseprite_thumb_creator.h
desktop/mime/: aseprite.xml
src/: CMakeLists.txt  README.md  app.cpp  app.h  app_menus.cpp  app_menus.h  ase_exception.cpp  ase_exception.h  check_args.cpp  check_args.h  config.h  console.cpp  console.h  context.cpp  context.h  context_access.h  context_flags.cpp  context_flags.h  context_listener.h  context_listener_list.cpp  context_listener_list.h  context_observer.h  context_observer_list.cpp  context_observer_list.h  document.cpp  document.h  document_access.h  document_api.cpp  document_api.h  document_event.h  document_id.h  document_location.cpp  document_location.h  document_observer.h  document_undo.cpp  document_undo.h  document_wrappers.h  documents.cpp  documents.h  drop_files.cpp  (+57 more)
src/allegro/: CMakeLists.txt  README.md  README.txt  modules.lst
src/app/: CMakeLists.txt  active_site_handler.cpp  active_site_handler.h  app.cpp  app.h  app_brushes.cpp  app_brushes.h  app_init.cpp  app_init.h  app_menus.cpp  app_menus.h  app_mod.h  app_options.cpp  app_options.h  app_render.cpp  app_render.h  app_tests.cpp  backup.cpp  backup.h  brush_pattern_slot.cpp  brush_pattern_slot.h  brush_slot.h  check_update.cpp  check_update.h  check_update_delegate.h  closed_docs.cpp  closed_docs.h  cmd.cpp  cmd.h  cmd_sequence.cpp  cmd_sequence.h  cmd_transaction.cpp  cmd_transaction.h  color.cpp  color.h  color_picker.cpp  color_picker.h  color_spaces.cpp  color_spaces.h  color_swatches.cpp  (+194 more)
src/ase/: context.cpp  context.h  current_sprite.cpp  current_sprite.h  ui_context.cpp  ui_context.h
src/base/: 24bits.h  CMakeLists.txt  LICENSE.txt  README.md  base.h  base64.cpp  base64.h  base64_tests.cpp  bind.h  buffer.h  cfile.cpp  cfile.h  chrono.cpp  chrono.h  chrono_unix.h  chrono_win32.h  clamp.h  compiler_specific.h  concurrent_queue.h  config.h.cmakein  connection.cpp  connection.h  convert_to.cpp  convert_to.h  debug.cpp  debug.h  disable_copying.h  dll.cpp  dll.h  dll_unix.h  dll_win32.h  errno_string.cpp  errno_string.h  exception.cpp  exception.h  file_handle.cpp  file_handle.h  file_handle_tests.cpp  file_handle_unittest.cpp  fs.cpp  (+86 more)
src/byteswap/: byteswap.h
src/cfg/: CMakeLists.txt  LICENSE.txt  README.md  cfg.cpp  cfg.h
src/commands/: cmd_about.c  cmd_about.cpp  cmd_advanced_mode.c  cmd_advanced_mode.cpp  cmd_auto_crop_sprite.c  cmd_background_from_layer.c  cmd_background_from_layer.cpp  cmd_brush_tool.c  cmd_cancel.cpp  cmd_canvas_size.cpp  cmd_cel_properties.c  cmd_cel_properties.cpp  cmd_change_color.cpp  cmd_change_image_type.c  cmd_change_image_type.cpp  cmd_change_pen.cpp  cmd_check_updates.cpp  cmd_clear.c  cmd_clear.cpp  cmd_close_all_files.c  cmd_close_editor.c  cmd_close_file.c  cmd_close_file.cpp  cmd_color_curve.c  cmd_configure_screen.c  cmd_configure_screen.cpp  cmd_configure_tools.c  cmd_configure_tools.cpp  cmd_convolution_matrix.c  cmd_copy.c  cmd_copy.cpp  cmd_copy_cel.c  cmd_copy_cel.cpp  cmd_copy_frame.c  cmd_crop.c  cmd_crop.cpp  cmd_crop_frame.c  cmd_crop_layer.c  cmd_crop_sprite.c  cmd_customize.c  (+153 more)
src/console/: console.c  console.cpp  console.h
src/core/: app.c  app.cpp  app.h  cfg.c  cfg.cpp  cfg.h  check_args.cpp  check_args.h  color.c  color.cpp  color.h  config.c  config.cpp  core.c  core.cpp  core.h  dirs.c  dirs.cpp  dirs.h  drop_files.cpp  drop_files.h  file_system.c  file_system.cpp  file_system.h  job.cpp  job.h  modules.c  modules.cpp  modules.h  shutdown.c  shutdown.h
src/css/: CMakeLists.txt  README.md  compound_style.cpp  compound_style.h  css.h  css_tests.cpp  css_unittest.cpp  map.h  query.cpp  query.h  rule.cpp  rule.h  sheet.cpp  sheet.h  state.h  stateful_style.h  style.cpp  style.h  value.cpp  value.h
src/desktop/: CMakeLists.txt  LICENSE.txt  README.md
src/dialogs/: about.c  about.h  aniedit.c  aniedit.cpp  aniedit.h  canvasze.c  canvasze.cpp  canvasze.h  colsel.c  colsel.h  dfrlen.c  dfrlen.h  dmapgen.c  dmapgen.h  dpaledit.c  dpaledit.h  drawtext.c  drawtext.cpp  drawtext.h  effect.h  filesel.c  filesel.cpp  filesel.h  filmedit.c  filmedit.h  gfxsel.c  gfxsel.h  maskcol.c  maskcol.cpp  maskcol.h  maskrepo.c  maskrepo.h  minipal.c  minipal.h  options.c  options.cpp  options.h  playfli.c  playfli.cpp  playfli.h  (+17 more)
src/dio/: CMakeLists.txt  LICENSE.txt  README.md  aseprite_common.cpp  aseprite_common.h  aseprite_decoder.cpp  aseprite_decoder.h  aseprite_encoder.cpp  aseprite_encoder.h  decode_delegate.h  decode_file.cpp  decode_file.h  decoder.cpp  decoder.h  detect_format.cpp  detect_format.h  encode_delegate.h  encoder.h  file_format.h  file_interface.h  pixel_io.h  stdio.cpp
src/doc/: CMakeLists.txt  LICENSE.txt  README.md  algo.cpp  algo.h  aligned_memory.h  anidir.cpp  anidir.h  blend.cpp  blend.h  blend_benchmark.cpp  blend_funcs.cpp  blend_funcs.h  blend_image.cpp  blend_image.h  blend_internals.h  blend_mode.cpp  blend_mode.h  brush.cpp  brush.h  brush_pattern.cpp  brush_pattern.h  brush_patterns.h  brush_type.cpp  brush_type.h  brushes.h  cancel_io.h  cel.cpp  cel.h  cel_data.cpp  cel_data.h  cel_data_io.cpp  cel_data_io.h  cel_io.cpp  cel_io.h  cel_list.h  cels_range.cpp  cels_range.h  color.cpp  color.h  (+213 more)
src/docio/: CMakeLists.txt  README.md  detect_format.cpp  detect_format.h  file_format.h
src/effect/: colcurve.c  colcurve.cpp  colcurve.h  convmatr.c  convmatr.cpp  convmatr.h  effect.c  effect.cpp  effect.h  (+11 more)
(+4314 files in other folders)
